Refactor copy-philox to work with input streams and path without java.io.